kubernetes/platform/hubble/overlays/management-prd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-hubble
  hostnames:
    - "hubble.mgmt.yuriykovalchuk.dev"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
